checkbox (0.16.10) UNRELEASED; urgency=low

  [ Jeff Lane ]
  * scripts/memory_compare: output now displays kB properly, not bytes labled
  * as kB. (LP: #1217506)

  [ Daniel Manrique ]
  * scripts/storage_test: Use parted silent mode to avoid hanging on disks
    with GPT (LP: #1215778)

  [ Sylvain Pineau ]
  * checkbox-old/scripts/fwts_test: Added the following new tests:
    method, msr, aspm, klog, oops and uefirtvariable (LP: #1202493)

 -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 23 Aug 2013 14:22:13 +0100

checkbox (0.16.9) saucy; urgency=low

  [ Brendan Donegan ]
  * data/whitelists/sru.whitelist - Remove erroneously added usb3 after suspend
    test in SRU whitelist.

  [ Daniel Manrique ]
  * scripts/internet_test: Added a passing threshold parameter for packet
    loss, added auto-adjustment of ping count and deadline so that they don't
    conflict with each other (LP: #1211144)
  * checkbox/parsers/udevadm: Fixed incorrect determination of network and
    wireless device IDs(LP: #1211521)
  * checkbox:parsers:submission: Tests and fixes for architecture matching
    which was causing udevadm processing to fail on armhf. (LP: #1214123).
  * checkbox/parsers/udevadm: Sent some uninteresting devices to the null
    category, and other minor tweaks to device categorization (LP: #1211369)

 -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 23 Aug 2013 14:21:51 +0100

checkbox (0.16.8) raring; urgency=low

  [ Daniel Manrique ]
  * scripts/network_device_info: ignore UTF-8 decoding errors from udevadm
    output, as we do everywhere else (LP: #1210050)

 -- Daniel Manrique <roadmr@ubuntu.com>  Fri, 09 Aug 2013 12:46:29 -0400

checkbox (0.16.7) saucy; urgency=low

  [ Po-Hsu Lin ]
  * jobs/mobilebroadband.txt.in: Make it disconnect from the mobile broadband
    network after job is completed to avoid any unexpected data transmission 
    expense (LP: #1204799)

  [ Jeff Lane ]